<resources>
    <string name="app_name">RecicApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iniciar">Iniciar</string>
    <string name="registr">Registró</string>
    <string name="registrarse">Resgistrarse</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu Contraseña?</string>
    <string name="nombres">Nombres</string>
    <string name="apallidos">Apallidos</string>
    <string name="celular">Celular</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="no_identificaci_n">No-Identificación</string>
</resources>